feat: refactor platform-specific CMake and source structure
Refactor MyUnit to support Linux-specific platform configuration.
Add platform subdirectory with dedicated Linux files for modular setup.
Simplify `myunit_selftest` executable linkage by removing redundant templates.

--- a/myunit/src/CMakeLists.txt
+++ b/myunit/src/CMakeLists.txt
@@ -1,14 +1,19 @@
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
+add_subdirectory(platform)
+
 SET (MYUNIT_SOURCES 
-    myunit.c
+    myunit.c  
 )
+
 
 SET (MYUNIT_HEADERS 
     myunit.h  
 )
 
-add_library(myunit ${MYUNIT_SOURCES})
+SET (MYUNIT_OBJECTS
+    $<TARGET_OBJECTS:myunit_platform>
+    )
 
-
-
+add_library(myunit ${MYUNIT_SOURCES} ${MYUNIT_OBJECTS})
+message(STATUS "MY_VARIABLE: ${MYUNIT_PLATFORM_SOURCES}")
