feat: enhance test suite for range assertions
Added new range assertion tests to the unit test suite. Improved existing macro definitions.

--- a/myunit/CMakeLists.txt
+++ b/myunit/CMakeLists.txt
@@ -16,4 +16,5 @@ include_directories (
     )
 
 add_executable(myunit_selftest myunit_selftest.c )
+target_compile_definitions(myunit_selftest PRIVATE  MYUNIT_VERBOSE=MYUNIT_VERB3_ALL_ASSERTS)
 target_link_libraries(myunit_selftest myunit)
