--- a/myunit/src/CMakeLists.txt
+++ b/myunit/src/CMakeLists.txt
@@ -2,10 +2,6 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 add_subdirectory(platform)
 
-SET (MYUNIT_SOURCES 
-    myunit.c  
-)
-
 
 SET (MYUNIT_HEADERS 
     myunit.h  
@@ -15,5 +11,4 @@ SET (MYUNIT_OBJECTS
     $<TARGET_OBJECTS:myunit_platform>
     )
 
-add_library(myunit ${MYUNIT_SOURCES} ${MYUNIT_OBJECTS})
-message(STATUS "MY_VARIABLE: ${MYUNIT_PLATFORM_SOURCES}")
+add_library(myunit ${MYUNIT_OBJECTS})
