--- a/proj/CMakeLists.txt
+++ b/proj/CMakeLists.txt
@@ -4,4 +4,18 @@ project(myunit C)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 
-add_subdirectory(src)
+SET (MYUNIT_SOURCES
+    myunit_platform_linux.c  
+)
+
+SET (MYUNIT_HEADERS
+    myunit.h  
+)
+
+
+add_library(myunit ${MYUNIT_SOURCES})
+
+add_executable(myunit_selftest myunit_selftest.c )
+#target_compile_definitions(myunit_selftest PRIVATE  MYUNIT_VERBOSE=MYUNIT_VERB3_ALL_ASSERTS)
+target_link_libraries(myunit_selftest myunit)
+
